  appropriate for offline processing, such as working on transport streams files.
  This option is also automatically set by some plugins which are designed for
  real-time streaming ("dvb", "ip", dektec", "play", "regulate", "mpeinject").

- Added options --log-protocol and --log-data to "tsecmg", "tsemmg" and plugins
  "scrambler", "datainject".

- Many more descriptors are supported. See the user's guide.

- On Windows, portable packages are now built for users without admin privilege.

- Bug fix: If an XML representation of a splice information table contained a
  splice_insert command, the <break_duration> structure was rejected when the
  event was marked as immediate.

- Bug fix: In "tsemmg", the TCP disconnection of the MUX was not detected in a
  timely fashion when data was injected using UDP.

- Bug fix: In "tsemmg", sending UDP data to a broadcast address was not allowed.
  Now it is possible to send data to a local broadcast address. Using routed
  broadcast remains not possible (because this is usually not a good thing to
  route broadcast).

- Regression fix: In plugin "datainject", the section mode was no longer handled
  correctly since version 3.10.

Version 3.11-715

- Added plugin "spliceinject" to inject SCTE 35 splice information in real time.

- Added options --sync-layout, --dump-datagram, --dump-udp, --dump-max and
  --skip to plugin "mpe".

- Added utility "tsemmg", an EMMG simulator for MUX integration testing.

- Added option --buffer-size in plugin "datainject". The plugin is now able to
  receive data using UDP, as defined in the DVB SimulCrypt protocol.

- SCTE 35 splice information tables can now be created from XML format.

- Bug fix: In "tstables" and plugin "tables", with options --xml and
  --max-tables, the XML structure was not properly closed.

- Bug fix: Application Information Tables (AIT) were not correctly serialized.

- Bug fix: In rare cases, time conversions could produce incorrect results when